--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-google-charts": "^3.0.15",
     "react-scripts": "3.3.0",
+    "react-wordcloud": "^1.1.1",
     "typescript": "^3.7.4"
   },
   "scripts": {
